services/safwk/c_wrapper/include/c_system_ability.h

/*
 * Copyright (C) 2023 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
#ifndef SAFWK_C_SYSTEM_ABILITY_H
#define SAFWK_C_SYSTEM_ABILITY_H

#ifdef __cplusplus
extern "C" {
#endif

struct CSystemAbilityInner;
typedef struct CSystemAbilityInner CSystemAbility;
typedef void (*OnStartCb)(CSystemAbility *sa);
typedef void (*OnStopCb)(CSystemAbility *sa);

CSystemAbility *CreateSystemAbility(int32_t saId, bool runOncreate, OnStartCb onStart,
    OnStopCb onStop);
const void *RemoteObjectGetUserData(CSystemAbility *systemability);
bool MakeAndRegisterAbility(CSystemAbility* systemAbility, const void *userData);
void DeleteNative(CSystemAbility *systemability);
#ifdef __cplusplus
}
#endif
#endif /* SAFWK_C_SYSTEM_ABILITY_H */